# libcnum

./: .gitignore  CMakeLists.txt  Makefile  README.md  cnum_calculator.cpp  libcnum_test.cpp  main.cpp
include/: libcnum.h  libcomplexnumber.h
libcomplexnumber/: libcomplexnumber.cpp  libcomplexnumber.h
src/: complexnumber.cpp  expressionparser.cpp  fractionnum.cpp
